--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "element-plus": "1.0.2-beta.60",
     "mockjs": "^1.1.0",
+    "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "throttle-debounce": "^3.0.1",
