--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "spark-md5": "^3.0.2",
     "throttle-debounce": "^3.0.1",
     "vue": "^3.1.2",
     "vue-router": "4",
