--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.4",
     "@vueuse/core": "^4.10.0",
     "axios": "^0.21.1",
     "echarts": "^5.2.2",
