--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "throttle-debounce": "^3.0.1",
     "vue": "^3.1.2",
     "vue-router": "4",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^15.0.3",
